fix mod-morph combos

--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -461,9 +461,6 @@ ZMK_COMBO(g_f9, &kp LG(F9), LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_f10, &kp LG(F10), LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_f11, &kp LG(F11), LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_f12, &kp LG(F12), LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(g_semicolon, &kp LG(SEMICOLON), LH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(g_colon, &kp LG(COLON), LH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(g_excl, &kp LG(EXCL), LH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_sqt, &kp LG(SQT), LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_at, &kp LG(AT), LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(g_hash, &kp LG(HASH), LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -489,6 +486,9 @@ ZMK_COMBO(g_lpar, &kp LG(LPAR), LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_lt, &kp LG(LT), LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_rpar, &kp LG(RPAR), LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(g_gt, &kp LG(GT), LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_csemi, &kp LG(SEMICOLON), LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_dcol, &kp LG(DOT), LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(g_qexcl, &kp LG(QMARK), LH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // alt combos
@@ -555,9 +555,6 @@ ZMK_COMBO(a_f9, &kp LA(F9), LH0 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_f10, &kp LA(F10), LH0 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_f11, &kp LA(F11), LH0 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_f12, &kp LA(F12), LH0 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(a_semicolon, &kp LA(SEMICOLON), LH0 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(a_colon, &kp LA(COLON), LH0 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(a_excl, &kp LA(EXCL), LH0 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_sqt, &kp LA(SQT), LH0 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_at, &kp LA(AT), LH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(a_hash, &kp LA(HASH), LH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -583,6 +580,9 @@ ZMK_COMBO(a_lpar, &kp LA(LPAR), LH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_lt, &kp LA(LT), LH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_rpar, &kp LA(RPAR), LH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(a_gt, &kp LA(GT), LH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_csemi, &kp LA(COMMA), LH0 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_dcol, &kp LA(DOT), LH0 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(a_qexcl, &kp LA(QMARK), LH0 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // ctrl combos
@@ -649,9 +649,6 @@ ZMK_COMBO(c_f9, &kp LC(F9), RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_f10, &kp LC(F10), RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_f11, &kp LC(F11), RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_f12, &kp LC(F12), RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(c_semicolon, &kp LC(SEMICOLON), RH0 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(c_colon, &kp LC(COLON), RH0 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(c_excl, &kp LC(EXCL), RH0 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_sqt, &kp LC(SQT), RH0 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_at, &kp LC(AT), RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(c_hash, &kp LC(HASH), RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -677,6 +674,9 @@ ZMK_COMBO(c_lpar, &kp LC(LPAR), RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_lt, &kp LC(LT), RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_rpar, &kp LC(RPAR), RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(c_gt, &kp LC(GT), RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_csemi, &kp LC(COMMA), RH0 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_dcol, &kp LC(DOT), RH0 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(c_qexcl, &kp LC(QMARK), RH0 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // hyper combos
@@ -743,9 +743,6 @@ ZMK_COMBO(hyp_f9, &kp LG(LA(LS(LC(F9)))), RH2 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_f10, &kp LG(LA(LS(LC(F10)))), RH2 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_f11, &kp LG(LA(LS(LC(F11)))), RH2 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_f12, &kp LG(LA(LS(LC(F12)))), RH2 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(hyp_semicolon, &kp LG(LA(LS(LC(SEMICOLON)))), RH2 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(hyp_colon, &kp LG(LA(LS(LC(COLON)))), RH2 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(hyp_excl, &kp LG(LA(LS(LC(EXCL)))), RH2 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_sqt, &kp LG(LA(LS(LC(SQT)))), RH2 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_at, &kp LG(LA(LS(LC(AT)))), RH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(hyp_hash, &kp LG(LA(LS(LC(HASH)))), RH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -771,6 +768,9 @@ ZMK_COMBO(hyp_lpar, &kp LG(LA(LS(LC(LPAR)))), RH2 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_lt, &kp LG(LA(LS(LC(LT)))), RH2 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_rpar, &kp LG(LA(LS(LC(RPAR)))), RH2 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(hyp_gt, &kp LG(LA(LS(LC(GT)))), RH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_csemi, &kp LG(LA(LC(SEMICOLON))), RH2 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_dcol, &kp LG(LA(LC(COLON))), RH2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(hyp_qexcl, &kp LG(LA(LC(EXCL))), RH2 RB4, ALL, COMBO_TERM_FAST)
 
 
 // ****************************************************************************
@@ -838,9 +838,6 @@ ZMK_COMBO(meh_f9, &kp LA(LS(LC(F9))), LH2 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_f10, &kp LA(LS(LC(F10))), LH2 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_f11, &kp LA(LS(LC(F11))), LH2 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_f12, &kp LA(LS(LC(F12))), LH2 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(meh_semicolon, &kp LA(LS(LC(SEMICOLON))), LH2 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(meh_colon, &kp LA(LS(LC(COLON))), LH2 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(meh_excl, &kp LA(LS(LC(EXCL))), LH2 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_sqt, &kp LA(LS(LC(SQT))), LH2 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_at, &kp LA(LS(LC(AT))), LH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(meh_hash, &kp LA(LS(LC(HASH))), LH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -866,6 +863,9 @@ ZMK_COMBO(meh_lpar, &kp LA(LS(LC(LPAR))), LH2 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_lt, &kp LA(LS(LC(LT))), LH2 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_rpar, &kp LA(LS(LC(RPAR))), LH2 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(meh_gt, &kp LA(LS(LC(GT))), LH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_csemi, &kp LA(LC(SEMICOLON)), LH2 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_dcol, &kp LA(LC(COLON)), LH2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(meh_qexcl, &kp LA(LC(EXCL)), LH2 RB4, ALL, COMBO_TERM_FAST)
 
 
 // ****************************************************************************
@@ -933,9 +933,6 @@ ZMK_COMBO(ac_f9, &kp LA(LC(F9)), LH0 RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_f10, &kp LA(LC(F10)), LH0 RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_f11, &kp LA(LC(F11)), LH0 RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_f12, &kp LA(LC(F12)), LH0 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ac_semicolon, &kp LA(LC(SEMICOLON)), LH0 RH0 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ac_colon, &kp LA(LC(COLON)), LH0 RH0 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ac_excl, &kp LA(LC(EXCL)), LH0 RH0 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_sqt, &kp LA(LC(SQT)), LH0 RH0 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_at, &kp LA(LC(AT)), LH0 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ac_hash, &kp LA(LC(HASH)), LH0 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -961,6 +958,9 @@ ZMK_COMBO(ac_lpar, &kp LA(LC(LPAR)), LH0 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_lt, &kp LA(LC(LT)), LH0 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_rpar, &kp LA(LC(RPAR)), LH0 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ac_gt, &kp LA(LC(GT)), LH0 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_csemi, &kp LA(LC(COMMA)), LH0 RH0 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_dcol, &kp LA(LC(DOT)), LH0 RH0 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ac_qexcl, &kp LA(LC(QMARK)), LH0 RH0 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // alt+gui combos
@@ -1027,9 +1027,6 @@ ZMK_COMBO(ag_f9, &kp LA(LG(F9)), LH0 LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_f10, &kp LA(LG(F10)), LH0 LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_f11, &kp LA(LG(F11)), LH0 LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_f12, &kp LA(LG(F12)), LH0 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ag_semicolon, &kp LA(LG(SEMICOLON)), LH0 LH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ag_colon, &kp LA(LG(COLON)), LH0 LH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ag_excl, &kp LA(LG(EXCL)), LH0 LH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_sqt, &kp LA(LG(SQT)), LH0 LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_at, &kp LA(LG(AT)), LH0 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ag_hash, &kp LA(LG(HASH)), LH0 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1055,6 +1052,9 @@ ZMK_COMBO(ag_lpar, &kp LA(LG(LPAR)), LH0 LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_lt, &kp LA(LG(LT)), LH0 LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_rpar, &kp LA(LG(RPAR)), LH0 LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ag_gt, &kp LA(LG(GT)), LH0 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_csemi, &kp LA(LG(COMMA)), LH0 LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_dcol, &kp LA(LG(DOT)), LH0 LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ag_qexcl, &kp LA(LG(QMARK)), LH0 LH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // alt+shift combos
@@ -1121,9 +1121,6 @@ ZMK_COMBO(as_f9, &kp LA(LS(F9)), LH0 RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_f10, &kp LA(LS(F10)), LH0 RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_f11, &kp LA(LS(F11)), LH0 RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_f12, &kp LA(LS(F12)), LH0 RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(as_semicolon, &kp LA(LS(SEMICOLON)), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(as_colon, &kp LA(LS(COLON)), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(as_excl, &kp LA(LS(EXCL)), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_sqt, &kp LA(LS(SQT)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_at, &kp LA(LS(AT)), LH0 RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(as_hash, &kp LA(LS(HASH)), LH0 RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1149,6 +1146,9 @@ ZMK_COMBO(as_lpar, &kp LA(LS(LPAR)), LH0 RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_lt, &kp LA(LS(LT)), LH0 RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_rpar, &kp LA(LS(RPAR)), LH0 RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(as_gt, &kp LA(LS(GT)), LH0 RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_csemi, &kp LA(SEMICOLON), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_dcol, &kp LA(COLON), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(as_qexcl, &kp LA(EXCL), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // ctrl+gui combos
@@ -1215,9 +1215,6 @@ ZMK_COMBO(cg_f9, &kp LC(LG(F9)), LH1 RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_f10, &kp LC(LG(F10)), LH1 RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_f11, &kp LC(LG(F11)), LH1 RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_f12, &kp LC(LG(F12)), LH1 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cg_semicolon, &kp LC(LG(SEMICOLON)), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cg_colon, &kp LC(LG(COLON)), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cg_excl, &kp LC(LG(EXCL)), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_sqt, &kp LC(LG(SQT)), LH0 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_at, &kp LC(LG(AT)), LH1 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cg_hash, &kp LC(LG(HASH)), LH1 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1243,6 +1240,9 @@ ZMK_COMBO(cg_lpar, &kp LC(LG(LPAR)), LH1 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_lt, &kp LC(LG(LT)), LH1 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_rpar, &kp LC(LG(RPAR)), LH1 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cg_gt, &kp LC(LG(GT)), LH1 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_csemi, &kp LC(LG(COMMA)), LH0 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_dcol, &kp LC(LG(DOT)), LH0 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cg_qexcl, &kp LC(LG(QMARK)), LH0 RH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // ctrl+shift combos
@@ -1309,9 +1309,6 @@ ZMK_COMBO(cs_f9, &kp LC(LS(F9)), RH1 RH0 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_f10, &kp LC(LS(F10)), RH1 RH0 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_f11, &kp LC(LS(F11)), RH1 RH0 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_f12, &kp LC(LS(F12)), RH1 RH0 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cs_semicolon, &kp LC(LS(SEMICOLON)), RH0 RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cs_colon, &kp LC(LS(COLON)), RH0 RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cs_excl, &kp LC(LS(EXCL)), RH0 RH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_sqt, &kp LC(LS(SQT)), RH0 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_at, &kp LC(LS(AT)), RH1 RH0 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cs_hash, &kp LC(LS(HASH)), RH1 RH0 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1337,6 +1334,9 @@ ZMK_COMBO(cs_lpar, &kp LC(LS(LPAR)), RH1 RH0 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_lt, &kp LC(LS(LT)), RH1 RH0 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_rpar, &kp LC(LS(RPAR)), RH1 RH0 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cs_gt, &kp LC(LS(GT)), RH1 RH0 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_csemi, &kp LC(SEMICOLON), RH0 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_dcol, &kp LC(COLON), RH0 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cs_qexcl, &kp LC(EXCL), RH0 RH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // gui+shift combos
@@ -1403,9 +1403,6 @@ ZMK_COMBO(gs_f9, &kp LG(LS(F9)), RH1 LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_f10, &kp LG(LS(F10)), RH1 LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_f11, &kp LG(LS(F11)), RH1 LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_f12, &kp LG(LS(F12)), RH1 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(gs_semicolon, &kp LG(LS(SEMICOLON)), RH1 LH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(gs_colon, &kp LG(LS(COLON)), RH1 LH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(gs_excl, &kp LG(LS(EXCL)), RH1 LH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_sqt, &kp LG(LS(SQT)), RH1 LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_at, &kp LG(LS(AT)), RH1 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(gs_hash, &kp LG(LS(HASH)), RH1 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1431,6 +1428,9 @@ ZMK_COMBO(gs_lpar, &kp LG(LS(LPAR)), RH1 LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_lt, &kp LG(LS(LT)), RH1 LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_rpar, &kp LG(LS(RPAR)), RH1 LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(gs_gt, &kp LG(LS(GT)), RH1 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_csemi, &kp LG(SEMICOLON), RH1 LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_dcol, &kp LG(COLON), RH1 LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(gs_qexcl, &kp LG(EXCL), RH1 LH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // alt+ctrl+gui combos
@@ -1497,9 +1497,6 @@ ZMK_COMBO(acg_f9, &kp LA(LC(LG(F9))), LH2 RH2 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_f10, &kp LA(LC(LG(F10))), LH2 RH2 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_f11, &kp LA(LC(LG(F11))), LH2 RH2 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_f12, &kp LA(LC(LG(F12))), LH2 RH2 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_semicolon, &kp LA(LC(LG(SEMICOLON))), LH2 RH2 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_colon, &kp LA(LC(LG(COLON))), LH2 RH2 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(acg_excl, &kp LA(LC(LG(EXCL))), LH2 RH2 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_sqt, &kp LA(LC(LG(SQT))), LH2 RH2 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_at, &kp LA(LC(LG(AT))), LH2 RH2 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(acg_hash, &kp LA(LC(LG(HASH))), LH2 RH2 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1525,6 +1522,9 @@ ZMK_COMBO(acg_lpar, &kp LA(LC(LG(LPAR))), LH2 RH2 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_lt, &kp LA(LC(LG(LT))), LH2 RH2 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_rpar, &kp LA(LC(LG(RPAR))), LH2 RH2 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(acg_gt, &kp LA(LC(LG(GT))), LH2 RH2 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_csemi, &kp LA(LC(LG(COMMA))), LH2 RH2 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_dcol, &kp LA(LC(LG(DOT))), LH2 RH2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(acg_qexcl, &kp LA(LC(LG(QMARK))), LH2 RH2 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // alt+gui+shift combos
@@ -1591,9 +1591,6 @@ ZMK_COMBO(ags_f9, &kp LA(LG(LS(F9))), LH2 LH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_f10, &kp LA(LG(LS(F10))), LH2 LH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_f11, &kp LA(LG(LS(F11))), LH2 LH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_f12, &kp LA(LG(LS(F12))), LH2 LH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_semicolon, &kp LA(LG(LS(SEMICOLON))), LH2 LH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_colon, &kp LA(LG(LS(COLON))), LH2 LH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(ags_excl, &kp LA(LG(LS(EXCL))), LH2 LH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_sqt, &kp LA(LG(LS(SQT))), LH2 LH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_at, &kp LA(LG(LS(AT))), LH2 LH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(ags_hash, &kp LA(LG(LS(HASH))), LH2 LH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1619,6 +1616,9 @@ ZMK_COMBO(ags_lpar, &kp LA(LG(LS(LPAR))), LH2 LH1 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_lt, &kp LA(LG(LS(LT))), LH2 LH1 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_rpar, &kp LA(LG(LS(RPAR))), LH2 LH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(ags_gt, &kp LA(LG(LS(GT))), LH2 LH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_csemi, &kp LA(LG(SEMICOLON)), LH2 LH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_dcol, &kp LA(LG(COLON)), LH2 LH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(ags_qexcl, &kp LA(LG(EXCL)), LH2 LH1 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // ctrl+gui+shift combos
@@ -1685,9 +1685,6 @@ ZMK_COMBO(cgs_f9, &kp LC(LG(LS(F9))), RH2 RH1 RB5 LT1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_f10, &kp LC(LG(LS(F10))), RH2 RH1 RB5 LB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_f11, &kp LC(LG(LS(F11))), RH2 RH1 RB5 LM4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_f12, &kp LC(LG(LS(F12))), RH2 RH1 RB5 LT4, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cgs_semicolon, &kp LC(LG(LS(SEMICOLON))), RH2 RH1 RB2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cgs_colon, &kp LC(LG(LS(COLON))), RH2 RH1 RB3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cgs_excl, &kp LC(LG(LS(EXCL))), RH2 RH1 RB4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_sqt, &kp LC(LG(LS(SQT))), RH2 RH1 RT4, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_at, &kp LC(LG(LS(AT))), RH2 RH1 LB3 LM3, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(cgs_hash, &kp LC(LG(LS(HASH))), RH2 RH1 LB2 LM2, ALL, COMBO_TERM_SLOW)
@@ -1713,5 +1710,8 @@ ZMK_COMBO(cgs_lpar, &kp LC(LG(LS(LPAR))), RH2 RH1 RT2 RM1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_lt, &kp LC(LG(LS(LT))), RH2 RH1 RM2 RB1, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_rpar, &kp LC(LG(LS(RPAR))), RH2 RH1 RT2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(cgs_gt, &kp LC(LG(LS(GT))), RH2 RH1 RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_csemi, &kp LC(LG(SEMICOLON)), RH2 RH1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_dcol, &kp LC(LG(COLON)), RH2 RH1 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cgs_qexcl, &kp LC(LG(EXCL)), RH2 RH1 RB4, ALL, COMBO_TERM_FAST)
 
 /* vim: set ft=c tw=174RH1 : */
