--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -5,11 +5,6 @@
 #define COMBO_TERM_FAST 40
 #define COMBO_TERM_SLOW 65
 
-// make homerow combos tap-only (so HRMs can be chorded instantaneously)
-#define HRC_ESC    &hml         LA(LGUI) ESC
-#define HRC_RET    &hml         LS(LGUI) RET
-#define HRC_RBRC   &hmr         LS(LGUI) RBRC
-
 // ZMK_COMBO(rcmd_f, &rcmd2 F, LH1 LT2, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_s, &rcmd2 S, LH1 LM2, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(rcmd_o, &rcmd O, LH1 RM4, ALL, COMBO_TERM_FAST)
@@ -132,23 +127,23 @@ ZMK_COMBO(under, &kp UNDER,     RB0 RB1,     ALL, COMBO_TERM_SLOW)
 // ********************************************************
 // left horizontal index + middle fingers
 // ********************************************************
-// ZMK_COMBO(enter, HRC_RET,       LT1 LT2,     ALL, COMBO_TERM_FAST)
-ZMK_COMBO(enter, HRC_RET,       LM1 LM2,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(enter, HRC_RET,       LB1 LB2,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(enter, &kp ENTER,       LT1 LT2,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(enter, &kp ENTER,       LM1 LM2,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(enter, &kp ENTER,       LB1 LB2,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // left horizontal middle + ring fingers
 // ********************************************************
 ZMK_COMBO(tab,   &kp TAB,       LT2 LT3,     ALL, COMBO_TERM_FAST)
-ZMK_COMBO(esc,   HRC_ESC,       LM2 LM3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LB2 LB3,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(esc,   &kp ESC,       LM2 LM3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LB2 LB3,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // left horizontal pinky + ring fingers
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       LT4 LT3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LM4 LM3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LB4 LB3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LT4 LT3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM4 LM3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LB4 LB3,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right horizontal index + middle fingers
@@ -161,14 +156,14 @@ ZMK_COMBO(home, &kp HOME,       RB1 RB2,     ALL, COMBO_TERM_FAST)
 // right horizontal middle + ring fingers
 // ********************************************************
 // ZMK_COMBO(home,   &kp UP,       RT2 RT3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(down,   &kp DOWN,       RM2 RM3,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(slash,   &kp SLASH,       RM2 RM3,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(end, &kp END,       RB2 RB3,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right horizontal pinky + ring fingers
 // ********************************************************
 ZMK_COMBO(pg_up,   &kp PG_UP,       RT4 RT3,     ALL, COMBO_TERM_FAST)
-ZMK_COMBO(pg_dn,   &kp PG_DN,       RM4 RM3,     ALL, COMBO_TERM_FAST)
+ZMK_COMBO(pg_dn,   &kp RIGHT,       RM4 RM3,     ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(pg_dn,   &kp PG_DN,       RB4 RB3,     ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
@@ -190,7 +185,7 @@ ZMK_COMBO(lbkt,   &kp LBKT,       LM2 LB3,     ALL, COMBO_TERM_FAST)
 // left diagonal ring + pinky fingers
 // ********************************************************
 ZMK_COMBO(space,   &kp SPACE,       LT3 LM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LM3 LB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM3 LB4,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right diagonal index + middle fingers
@@ -208,7 +203,7 @@ ZMK_COMBO(gt,   &kp GT,       RM2 RB3,     ALL, COMBO_TERM_FAST)
 // right diagonal ring + pinky fingers
 // ********************************************************
 ZMK_COMBO(bspc,   &kp BSPC,       RT3 RM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       RM3 RB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RM3 RB4,     ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // three finger horizontal combos
@@ -218,14 +213,14 @@ ZMK_COMBO(bspc,   &kp BSPC,       RT3 RM4,     ALL, COMBO_TERM_FAST)
 // ********************************************************
 ZMK_COMBO(bri_up,   &kp C_BRI_UP,       LT1 LT2 LT3,     ALL, COMBO_TERM_FAST)
 ZMK_COMBO(bri_dn,   &kp C_BRI_DN,       LM1 LM2 LM3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LM1 LB2 LB3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM1 LB2 LB3,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // left horizontal middle + ring + pinky fingers
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       LT2 LT3 LT4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LM2 LM3 LM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LM2 LB3 LB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LT2 LT3 LT4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM2 LM3 LM4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM2 LB3 LB4,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right horizontal index + middle + ring fingers
@@ -245,27 +240,27 @@ ZMK_COMBO(pp,   &kp C_PP,       RM2 RB3 RB4,     ALL, COMBO_TERM_FAST)
 // three finger lowered index or pinky combos
 // ****************************************************************************
 // left index + middle + ring fingers
-// ZMK_COMBO(esc,   HRC_ESC,       LM1 LT2 LT3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LB1 LM2 LM3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM1 LT2 LT3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LB1 LM2 LM3,     ALL, COMBO_TERM_FAST)
 
 // left pinky + middle + ring fingers
-// ZMK_COMBO(esc,   HRC_ESC,       LT2 LT3 LM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LM2 LM3 LB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LT2 LT3 LM4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM2 LM3 LB4,     ALL, COMBO_TERM_FAST)
 
 // right index + middle + ring fingers
-// ZMK_COMBO(esc,   HRC_ESC,       RM1 RT2 RT3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       RB1 RM2 RM3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RM1 RT2 RT3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RB1 RM2 RM3,     ALL, COMBO_TERM_FAST)
 
 // right pinky + middle + ring fingers
-// ZMK_COMBO(esc,   HRC_ESC,       RT2 RT3 RM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       RM2 RM3 RB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RT2 RT3 RM4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RM2 RM3 RB4,     ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // three finger raised middle finger combos
 // ****************************************************************************
 // left index + middle + ring fingers
-// ZMK_COMBO(esc,   HRC_ESC,       LM1 LT2 LM3,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LB1 LM2 LB3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM1 LT2 LM3,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LB1 LM2 LB3,     ALL, COMBO_TERM_FAST)
 
 // right index + middle + ring fingers
 ZMK_COMBO(rw,   &kp C_RW,       RM1 RT2 RM3,     ALL, COMBO_TERM_FAST)
@@ -277,16 +272,16 @@ ZMK_COMBO(ff,   &kp C_FF,       RB1 RM2 RB3,     ALL, COMBO_TERM_FAST)
 // ********************************************************
 // left horizontal
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       LT1 LT2 LT3 LT4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LM1 LM2 LM3 LM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LB1 LB2 LB3 LB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LT1 LT2 LT3 LT4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM1 LM2 LM3 LM4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LB1 LB2 LB3 LB4,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right horizontal
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       RT1 RT2 RT3 RT4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       RM1 RM2 RM3 RM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       RB1 RB2 RB3 RB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RT1 RT2 RT3 RT4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RM1 RM2 RM3 RM4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RB1 RB2 RB3 RB4,     ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // four finger diagonal combos
@@ -294,14 +289,14 @@ ZMK_COMBO(ff,   &kp C_FF,       RB1 RM2 RB3,     ALL, COMBO_TERM_FAST)
 // ********************************************************
 // left
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       LM1 LT2 LT3 LM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       LB1 LM2 LM3 LB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LM1 LT2 LT3 LM4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       LB1 LM2 LM3 LB4,     ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right
 // ********************************************************
-// ZMK_COMBO(esc,   HRC_ESC,       RM1 RT2 RT3 RM4,     ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(esc,   HRC_ESC,       RB1 RM2 RM3 RB4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RM1 RT2 RT3 RM4,     ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(esc,   &kp ESC,       RB1 RM2 RM3 RB4,     ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
 // shift combos
