--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -46,7 +46,8 @@
 // ********************************************************
 // left thumb horizontal
 // ********************************************************
-ZMK_COMBO(hammer_vim, &kp LA(LG(ESC)), LH1 LH2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(hammer_vim, &kp LA(LG(ESC)), LH1 LH2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(warp_combo, &warp_on, LH1 LH2, ALL, COMBO_TERM_SLOW)
 ZMK_COMBO(homerow, &kp LA(LC(LS(R))), LH0 LH1, ALL, COMBO_TERM_SLOW)
 
 // ********************************************************
@@ -158,7 +159,7 @@ ZMK_COMBO(home, &kp HOME, RB1 RB2, ALL, COMBO_TERM_FAST)
 // ********************************************************
 // right horizontal middle + ring fingers
 // ********************************************************
-// ZMK_COMBO(home, &kp UP, RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(cancel, &kp K_CANCEL, RT2 RT3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(slash, &kp SLASH, RM2 RM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(end, &kp END, RB2 RB3, ALL, COMBO_TERM_FAST)
 
@@ -185,9 +186,16 @@ ZMK_COMBO(lbrc, &kp LBRC, LT2 LM3, ALL, COMBO_TERM_FAST)
 ZMK_COMBO(lbkt, &kp LBKT, LM2 LB3, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
+// left diagonal ring + index fingers
+// ********************************************************
+ZMK_COMBO(lbrc, &kp LBRC, LT2 LM3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(lbkt, &kp LBKT, LM2 LB3, ALL, COMBO_TERM_FAST)
+
+
+// ********************************************************
 // left diagonal ring + pinky fingers
 // ********************************************************
-ZMK_COMBO(space, &kp SPACE, LT3 LM4, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(space, &kp SPACE, LT3 LM4, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(esc, &kp ESC, LM3 LB4, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
@@ -205,7 +213,7 @@ ZMK_COMBO(gt, &kp GT, RM2 RB3, ALL, COMBO_TERM_FAST)
 // ********************************************************
 // right diagonal ring + pinky fingers
 // ********************************************************
-ZMK_COMBO(bspc, &kp BSPC, RT3 RM4, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(bspc, &kp BSPC, RT3 RM4, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(esc, &kp ESC, RM3 RB4, ALL, COMBO_TERM_FAST)
 
 // ****************************************************************************
