--- a/config/includes/behaviours.dtsi
+++ b/config/includes/behaviours.dtsi
@@ -10,6 +10,7 @@
                 LEFT DOWN UP RIGHT
                 PG_UP PG_DN
             >;
+            ignore-modifiers;
         };
     };
 };
