--- a/config/includes/combos.dtsi
+++ b/config/includes/combos.dtsi
@@ -46,9 +46,9 @@
 // ********************************************************
 // left thumb horizontal
 // ********************************************************
-// ZMK_COMBO(hammer_vim, &kp LA(LG(ESC)), LH1 LH2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(warp_combo, &warp_on, LH1 LH2, DEF NAV NUM FUN, COMBO_TERM_SLOW)
-ZMK_COMBO(warp_off_combo, &warp_off, LH1 LH2, WARP, COMBO_TERM_SLOW)
+ZMK_COMBO(hammer_vim, &kp LA(LG(ESC)), LH1 LH2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(warp_combo, &warp_on, LH1 LH2, DEF NAV NUM FUN, COMBO_TERM_SLOW)
+// ZMK_COMBO(warp_off_combo, &warp_off, LH1 LH2, WARP, COMBO_TERM_SLOW)
 ZMK_COMBO(homerow, &kp LA(LC(LS(R))), LH0 LH1, ALL, COMBO_TERM_SLOW)
 
 // ********************************************************
@@ -74,38 +74,38 @@ ZMK_COMBO(mo_fun, &mo FUN, RH1 RH2, ALL, COMBO_TERM_SLOW)
 // single finger combos: all symbols not on base row except paired symbols
 // ****************************************************************************
 // ********************************************************
-// left vertical middle + bottom rows: left number row symbols
+// left vertical middle + bottom rows
 // ********************************************************
-ZMK_COMBO(excl, &kp EXCL, LB4 LM4, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(at, &kp AT, LB3 LM3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(hash, &kp HASH, LB2 LM2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(dllr, &kp DLLR, LB1 LM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(prcnt, &kp PRCNT, LB0 LM0, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(excl, &kp EXCL, LB4 LM4, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(at, &kp AT, LB3 LM3, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(hash, &kp HASH, LB2 LM2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(dllr, &kp DLLR, LB1 LM1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(prcnt, &kp PRCNT, LB0 LM0, ALL, COMBO_TERM_SLOW)
 
 // ********************************************************
 // right vertical middle + bottom rows: right number row symbols
 // ********************************************************
-ZMK_COMBO(caret, &kp CARET, RB0 RM0, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(amps, &kp AMPS, RB1 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(star, &kp STAR, RB2 RM2, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(caret, &kp CARET, RB0 RM0, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(amps, &kp AMPS, RB1 RM1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(star, &kp STAR, RB2 RM2, ALL, COMBO_TERM_SLOW)
 // ZMK_COMBO(star, &kp STAR, RB3 RM3, ALL, COMBO_TERM_SLOW)
 // ZMK_COMBO(star, &kp STAR, RB4 RM4, ALL, COMBO_TERM_SLOW)
 
 // ********************************************************
-// left vertical middle + top rows: other symbols
+// left vertical middle + top rows
 // ********************************************************
-// ZMK_COMBO(tilde, &kp TILDE, LM4 LT4, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(tilde, &kp TILDE, LM3 LT3, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(grave, &kp GRAVE, LM2 LT2, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(bslh, &kp BSLH, LM1 LT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(pipe, &kp PIPE, LM0 LT0, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(excl, &kp EXCL, LM4 LT4, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(at, &kp AT, LM3 LT3, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(hash, &kp HASH, LM2 LT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(dllr, &kp DLLR, LM1 LT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(prcnt, &kp PRCNT, LM0 LT0, ALL, COMBO_TERM_SLOW)
 
 // ********************************************************
-// right vertical middle + top rows: other symbols
+// right vertical middle + top rows
 // ********************************************************
-// ZMK_COMBO(home, &kp HOME, RM0 RT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(left, &kp LEFT, RM1 RT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(right, &kp RIGHT, RM2 RT2, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(caret, &kp CARET, RM0 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(amps, &kp AMPS, RM1 RT1, ALL, COMBO_TERM_SLOW)
+ZMK_COMBO(star, &kp STAR, RM2 RT2, ALL, COMBO_TERM_SLOW)
 // ZMK_COMBO(end, &kp END, RM3 RT3, ALL, COMBO_TERM_SLOW)
 // ZMK_COMBO(plus, &kp PLUS, RM4 RT4, ALL, COMBO_TERM_SLOW)
 
@@ -113,15 +113,15 @@ ZMK_COMBO(right, &kp RIGHT, RM2 RT2, ALL, COMBO_TERM_SLOW)
 // left horizontal index finger
 // ********************************************************
 // ZMK_COMBO(slash, &kp SLASH, LT0 LT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(equal, &kp EQUAL, LM0 LM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(plus, &kp PLUS, LB0 LB1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(equal, &kp EQUAL, LM0 LM1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(plus, &kp PLUS, LB0 LB1, ALL, COMBO_TERM_SLOW)
 
 // ********************************************************
 // right horizontal index finger
 // ********************************************************
 // ZMK_COMBO(slash, &kp SLASH, RT0 RT1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(minus, &kp MINUS, RM0 RM1, ALL, COMBO_TERM_SLOW)
-ZMK_COMBO(under, &kp UNDER, RB0 RB1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(minus, &kp MINUS, RM0 RM1, ALL, COMBO_TERM_SLOW)
+// ZMK_COMBO(under, &kp UNDER, RB0 RB1, ALL, COMBO_TERM_SLOW)
 
 // ****************************************************************************
 // two finger horizontal combos
@@ -129,19 +129,19 @@ ZMK_COMBO(under, &kp UNDER, RB0 RB1, ALL, COMBO_TERM_SLOW)
 // ********************************************************
 // left horizontal index + middle fingers
 // ********************************************************
-// ZMK_COMBO(enter, &kp ENTER, LT1 LT2, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(enter, &hml LG(LSHFT) ENTER, LM1 LM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(enter, &kp ENTER, LB1 LB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(grave, &kp GRAVE, LT1 LT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(minus, &hml LG(LSHFT) MINUS, LM1 LM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(under, &kp UNDER, LB1 LB2, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // left horizontal middle + ring fingers
 // ********************************************************
-// ZMK_COMBO(tab, &kp TAB, LT2 LT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(esc, &hml LG(LALT) ESC, LM2 LM3, DEF NAV NUM FUN, COMBO_TERM_FAST)
+ZMK_COMBO(tilde, &kp TILDE, LT2 LT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(equal, &hml LG(LALT) EQUAL, LM2 LM3, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(warp_off_combo, &warp_off, LM2 LM3, WARP, COMBO_TERM_FAST)
 // ZMK_COMBO(at_esc_combo, &at_esc, LM2 LM3, ALT_TAB, COMBO_TERM_FAST)
 // ZMK_COMBO(ct_esc_combo, &ct_esc, LM2 LM3, CTRL_TAB, COMBO_TERM_FAST)
-// ZMK_COMBO(esc, &kp ESC, LB2 LB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(plus, &kp PLUS, LB2 LB3, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // left horizontal pinky + ring fingers
@@ -153,17 +153,17 @@ ZMK_COMBO(esc, &hml LG(LALT) ESC, LM2 LM3, DEF NAV NUM FUN, COMBO_TERM_FAST)
 // ********************************************************
 // right horizontal index + middle fingers
 // ********************************************************
-// ZMK_COMBO(up, &kp UP, RT1 RT2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(down, &hmr LG(LSHFT) DOWN, RM1 RM2, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(home, &kp HOME, RB1 RB2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(lpar, &kp LPAR, RT1 RT2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(lbkt, &hmr LG(LSHFT) LBKT, RM1 RM2, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(bslh, &kp BSLH, RB1 RB2, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right horizontal middle + ring fingers
 // ********************************************************
-// ZMK_COMBO(cancel, &kp K_CANCEL, RT2 RT3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(cancel, &kp K_CANCEL, RM2 RM3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rpar, &kp RPAR, RT2 RT3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rbkt, &hmr LG(LALT) RBKT, RM2 RM3, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(slash, &hmr LG(LALT) SLASH, RM2 RM3, ALL, COMBO_TERM_FAST)
-// ZMK_COMBO(end, &kp END, RB2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(pipe, &kp PIPE, RB2 RB3, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right horizontal pinky + ring fingers
@@ -178,19 +178,19 @@ ZMK_COMBO(cancel, &kp K_CANCEL, RM2 RM3, ALL, COMBO_TERM_FAST)
 // ********************************************************
 // left diagonal index + middle fingers
 // ********************************************************
-ZMK_COMBO(rbrc, &kp RBRC, LT2 LM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(rbkt, &kp RBKT, LM2 LB1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rbrc, &kp RBRC, LT2 LM1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(rbkt, &kp RBKT, LM2 LB1, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // left diagonal ring + middle fingers
 // ********************************************************
-ZMK_COMBO(lbrc, &kp LBRC, LT2 LM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(lbkt, &kp LBKT, LM2 LB3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(lbrc, &kp LBRC, LT2 LM3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(lbkt, &kp LBKT, LM2 LB3, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // left diagonal ring + index fingers
 // ********************************************************
-ZMK_COMBO(lbrc, &kp LBRC, LT2 LM3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(lbrc, &kp LBRC, LT2 LM3, ALL, COMBO_TERM_FAST)
 // ZMK_COMBO(lbkt, &kp LBKT, LM2 LB3, ALL, COMBO_TERM_FAST)
 
 
@@ -203,14 +203,14 @@ ZMK_COMBO(lbrc, &kp LBRC, LT2 LM3, ALL, COMBO_TERM_FAST)
 // ********************************************************
 // right diagonal index + middle fingers
 // ********************************************************
-ZMK_COMBO(lpar, &kp LPAR, RT2 RM1, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(lt, &kp LT, RM2 RB1, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(lbrc, &kp LBRC, RT2 RM1, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(lt, &kp LT, RM2 RB1, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right diagonal ring + middle fingers
 // ********************************************************
-ZMK_COMBO(rpar, &kp RPAR, RT2 RM3, ALL, COMBO_TERM_FAST)
-ZMK_COMBO(gt, &kp GT, RM2 RB3, ALL, COMBO_TERM_FAST)
+ZMK_COMBO(rbrc, &kp RBRC, RT2 RM3, ALL, COMBO_TERM_FAST)
+// ZMK_COMBO(gt, &kp GT, RM2 RB3, ALL, COMBO_TERM_FAST)
 
 // ********************************************************
 // right diagonal ring + pinky fingers
